--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,6 @@ nanobind_add_module(dendroptimized_ext NOMINSIZE STABLE_ABI LTO src/dendroptimiz
 # All libs are header only. 
 # it's faster to include like this than using exported targets 
 # (i.e add_subdirectories(...))
-target_include_directories(dendroptimized_ext PRIVATE "include" "third_party/eigen" "third_party/nanoflann/include" "third_party/taskflow") 
+target_include_directories(dendroptimized_ext PRIVATE "include" "third_party/eigen" "third_party/taskflow") 
 
 install(TARGETS dendroptimized_ext LIBRARY DESTINATION dendroptimized)
