--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
   "Topic :: Scientific/Engineering"
 ]
 
+
 [tool.scikit-build]
 # Protect the configuration against future changes in scikit-build-core
 minimum-version = "0.4"
@@ -60,7 +61,7 @@ deps =
   pytest >= 7.4
   dendromatics == 0.5.1
   pytest-benchmark
-commands = pytest --basetemp="{envtmpdir}" --benchmark-skip {posargs}
+commands = pytest --basetemp="{envtmpdir}" -s --benchmark-skip {posargs}
 
 [testenv:bench]
 commands = pytest --basetemp="{envtmpdir}" --benchmark-only {posargs}
