Add core point linking with lockfree disjoint set

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "third_party/nanoflann"]
 	path = third_party/nanoflann
 	url = https://github.com/jlblancoc/nanoflann
+[submodule "third_party/dset"]
+	path = third_party/dset
+	url = https://github.com/wjakob/dset
