--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,8 @@ nanobind_add_module(dendroptimized_ext NOMINSIZE STABLE_ABI LTO src/dendroptimiz
 # (i.e add_subdirectories(...))
 target_include_directories(dendroptimized_ext PRIVATE "include" 
   "third_party/eigen" 
-  "third_party/taskflow", 
-  "third_party/nanoflann/include", 
+  "third_party/taskflow" 
+  "third_party/nanoflann/include" 
   "third_party/dset") 
 
 install(TARGETS dendroptimized_ext LIBRARY DESTINATION dendroptimized)
