Fast connected component computation (DBSCAN) (#2)
* API Compatibility was not 100% accurate + add num_pts computation

* Add code structure and NN computation

* Add core point linking with lockfree disjoint set

* Correct bug (no contiguous indexing)

* Attribute border point to its nearest cluster

* Remove parallel union find (does not seems to be worth it in our cases)+cleanup

* Various fixes

* Nanoflann 1.6.1 and // kdtree index construction

* Add documentation

* Tests reorgansation

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "taskflow"]
 	path = third_party/taskflow
 	url = https://github.com/taskflow/taskflow
+[submodule "third_party/nanoflann"]
+	path = third_party/nanoflann
+	url = https://github.com/jlblancoc/nanoflann
+[submodule "third_party/dset"]
+	path = third_party/dset
+	url = https://github.com/wjakob/dset
