--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022]
+        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
       fail-fast: false
 
     steps:
@@ -24,17 +24,17 @@ jobs:
           submodules: True
         
       # Used to host cibuildwheel
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.15
+        run: python -m pip install cibuildwheel==2.20.0
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: ./wheelhouse/*.whl
 
   publish:
@@ -48,7 +48,7 @@ jobs:
         with:
           submodules: True
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
 
       - uses: actions/download-artifact@v3
         with:
@@ -59,7 +59,7 @@ jobs:
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-        # construct the source package and upload src and wheels to PiPy
+        # construct the source package and upload src and wheels to PyPI
         run: |
           python -m pip install twine
           python setup.py sdist 
