--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -50,18 +50,18 @@ jobs:
 
       - uses: actions/setup-python@v5
 
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: wheels
-          path: wheelhouse
+          pattern: cibw-*
+          path: dist
+          merge-multiple: true
 
       - name: Publish to PyPI
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         # construct the source package and upload src and wheels to PyPI
         run: |
-          python -m pip install twine
-          python setup.py sdist 
+          python -m pip install twine build --upgrade
+          python -m build --sdist
           twine upload dist/*
-          twine upload wheelhouse/*.whl
